# SSL_robot_challenge

./: LICENSE  README.md
ExoskeletonUnity/temp/: exoskeleton.urdf
ExoskeletonUnity/temp/meshes/: FD22-0021.stl  FD22-0038.stl  FD22-0042.stl  Grip.stl
ExoskeletonUnity/temp/meshes/base_link-ScapulaMount/: FD22-0018.stl  FD22-0024.stl  FD22-0044.stl
ExoskeletonUnity/temp/meshes/base_link_ScapulaMount/: FD22-0016.stl
ExoskeletonUnity/temp/meshes/link1-FD22-0043/: FD22-0043.stl
ExoskeletonUnity/temp/meshes/link10_HAND/: FD22-0065c.stl  FD22-0097.stl  MOCK_RH-5A-XX02.stl  McM_90945A710.stl  ST_SAA10Xx0.stl
ExoskeletonUnity/temp/meshes/link11_HAND_SLIDER/: FD22-0096.stl  McM_90945A710.stl
ExoskeletonUnity/temp/meshes/link12_grip/: FD22-0093a.stl  McM_90945A725.stl  (+1 more)
ExoskeletonUnity/urdf/: exoskeleton.urdf  restore.urdf
ExoskeletonUnity/urdf/meshes/: FD22-0039.stl  FD22-0040.stl  HAND_SLIDER.stl  ScapulaMount.stl
ExoskeletonUnity/urdf/meshes_restore/: link1.stl  link2.stl  link5.stl  link6.stl  link7.stl  link8.stl
install/: setup.sh
log/: latest_build  latest_list
src/bitchin_n_moanin/: CMakeLists.txt  package.xml
src/bitchin_n_moanin/srv/: AddRobit.srv
src/control/: CMakeLists.txt
src/launcher/: package.xml  setup.py
src/launcher/launcher/: kicker.py  xacro_urdf.py
src/robot/tools/: xacro_to_urdf.bash
src/romeo_tui/: CMakeLists.txt
ssl_robot_challenge/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ssl_robot_challenge/log/: latest_build
ssl_robot_challenge/src/bitchin_n_moanin/: CMakeLists.txt
ssl_robot_challenge/src/control/: package.xml
ssl_robot_challenge/src/launcher/: setup.py
(+116 files in other folders)
